--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
 	"author": "armno",
 	"license": "MIT",
 	"devDependencies": {
+		"@types/gl-matrix": "^2.4.4",
 		"awesome-typescript-loader": "^5.2.1",
 		"eslint": "^5.6.1",
 		"source-map-loader": "^0.2.4",
@@ -12,5 +13,8 @@
 		"webpack": "^4.20.2",
 		"webpack-cli": "^3.1.2",
 		"webpack-dev-server": "^3.1.9"
+	},
+	"dependencies": {
+		"gl-matrix": "^2.8.1"
 	}
 }
