--- a/package.json
+++ b/package.json
@@ -1,20 +1,23 @@
 {
-	"name": "webgl-102",
-	"description": "",
-	"version": "1.0.0",
-	"author": "armno",
-	"license": "MIT",
-	"devDependencies": {
-		"@types/gl-matrix": "^2.4.4",
-		"awesome-typescript-loader": "^5.2.1",
-		"eslint": "^5.6.1",
-		"source-map-loader": "^0.2.4",
-		"typescript": "^3.1.3",
-		"webpack": "^4.20.2",
-		"webpack-cli": "^3.1.2",
-		"webpack-dev-server": "^3.1.9"
-	},
-	"dependencies": {
-		"gl-matrix": "^2.8.1"
-	}
+  "name": "webgl-102",
+  "description": "",
+  "version": "1.0.0",
+  "author": "armno",
+  "license": "MIT",
+  "scripts": {
+    "start": "webpack-dev-server --open"
+  },
+  "devDependencies": {
+    "@types/gl-matrix": "^2.4.4",
+    "awesome-typescript-loader": "^5.2.1",
+    "eslint": "^5.6.1",
+    "source-map-loader": "^0.2.4",
+    "typescript": "^3.1.3",
+    "webpack": "^4.20.2",
+    "webpack-cli": "^3.1.2",
+    "webpack-dev-server": "^3.1.9"
+  },
+  "dependencies": {
+    "gl-matrix": "^2.8.1"
+  }
 }
