--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "devDependencies": {
     "@types/gl-matrix": "^2.4.4",
+    "@types/three": "^0.93.4",
     "awesome-typescript-loader": "^5.2.1",
     "eslint": "^5.6.1",
     "source-map-loader": "^0.2.4",
@@ -18,6 +19,7 @@
     "webpack-dev-server": "^3.1.9"
   },
   "dependencies": {
-    "gl-matrix": "^2.8.1"
+    "gl-matrix": "^2.8.1",
+    "three": "^0.97.0"
   }
 }
